--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@
 # - fill out the placeholders with the appropriate values for the given service after sign up
 
 
-VITE_API_BASE_URL=http://localhost:7000
+VITE_API_BASE_URL=https://mern-ordring-food-backend.onrender.com
 
 VITE_AUTH0_DOMAIN=dev-xxx.us.auth0.com
 VITE_AUTH0_CLIENT_ID=Cn88qxxx
-VITE_AUTH0_CALLBACK_URL=http://localhost:5173
+VITE_AUTH0_CALLBACK_URL=https://mern-ordring-food.netlify.app
 VITE_AUTH0_AUDIENCE=xx-xxxx-xxx-api
